用户信息增加账号字段，用户名改为账号

--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -1,6 +1,6 @@
 {
-    "username": "用户名",
-    "usernameRequired": "用户名必填",
+    "username": "账号",
+    "usernameRequired": "账号必填",
     "password": "密码",
     "passwordRequired": "密码必填",
     "registerNewAccount": "注册新账号",
