消除所有警告代码、整理data目录、修改dashboard

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,5 +1,5 @@
 {
-    "PageConfirm": "Confirm",
+    "pageConfirm": "Confirm",
     "username": "Username",
     "usernameRequired": "Username is required",
     "password": "Password",
