修改国际化

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -25,23 +25,41 @@
     "dashTopLinks": "Popular Links",
     "requestError": "Request Error",
     "personName": "Personnel Name",
-    "personRequired": "Name Required",
+    "required": "Required",
     "personNickname": "Nickname",
     "personGender": "Gender",
     "personBirthday": "Birthday",
     "personDepartment": "Department",
     "save": "Save",
     "saved": "Saved Successfully",
-    "inquire": "Filter",
+    "query": "Filter",
     "reset": "Reset",
-    "increase": "Add User",
+    "add": "Add",
     "modify": "Modify",
     "delete": "Delete",
     "confirmDelete": "Are you sure?",
     "userList": "User List",
+    "roleList": "Role List",
+    "dictList": "Dict List",
     "name": "Name",
     "operating": "Operating",
     "creationTime": "Creation Time",
-    "updateTime": "Update Time"
+    "updateTime": "Update Time",
+    "drawer": "Drawer",
+    "side": "Side",
+    "menuDisplay": "Menu Display",
+    "language": "Language",
+    "noRoutingMode": "No Routing Mode",
+    "routingMode": "Routing Mode",
+    "myInformation": "My Information",
+    "selectMenus": "Select Menus",
+    "selectUsers": "Select Users",
+    "unselectedUsers": "Unselected Users",
+    "selectedUsers": "Selected Users",
+    "selectUnselectedUsers": "Please select [UnSelected Users]",
+    "selectSelectedUsers": "Please select [Selected Users]",
+    "englishName": "English Name",
+    "sequenceNumber": "Sequence Number",
+    "remarks": "Remarks"
 
 }
