--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -24,23 +24,40 @@
     "dashTopLinks": "常用链接",
     "requestError": "请求出错",
     "personName": "人员姓名",
-    "personRequired": "必填",
+    "required": "必填",
     "personNickname": "呢称",
     "personGender": "性别",
     "personBirthday": "出生年月",
     "personDepartment": "所属部门",
     "save": "保存",
     "saved": "保存成功",
-    "inquire": "查询",
+    "query": "查询",
     "reset": "重置",
-    "increase": "增加",
+    "add": "增加",
     "modify": "修改",
     "delete": "删除",
     "confirmDelete": "确定删除",
     "userList": "用户列表",
+    "roleList": "角色列表",
+    "dictList": "数据字典列表",
     "name": "姓名",
     "operating": "操作",
     "creationTime": "创建时间",
-    "updateTime": "修改时间"
-
+    "updateTime": "修改时间",
+    "drawer": "抽屉",
+    "side": "侧边",
+    "menuDisplay": "菜单显示",
+    "language": "语言",
+    "noRoutingMode": "无路由模式",
+    "routingMode": "路由模式",
+    "myInformation": "我的信息",
+    "selectMenus": "选择菜单",
+    "selectUsers": "选择人员",
+    "unselectedUsers": "未选择的人员",
+    "selectedUsers": "已选择的人员",
+    "selectUnselectedUsers": "请选择【未选择人员】",
+    "selectSelectedUsers": "请选择【已选择人员】",
+    "englishName": "英文名",
+    "sequenceNumber": "顺序号",
+    "remarks": "备注"
 }
