修改国际化 升级cry0.1.9

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,65 +1,84 @@
 {
-    "pageConfirm": "Confirm",
-    "username": "Username",
-    "usernameRequired": "Username is required",
-    "password": "Password",
-    "passwordRequired": "Password is required",
-    "register": "Register",
-    "registerNewAccount": "Register a new account",
-    "registerSuccess": "Registration Successful",
-    "forgetPassword": "Clear Password",
-    "login": "login",
-    "confirmPassword": "Confirm Password",
-    "passwordMismatch": "Passwords must be the same",
-    "haveAccountLogin": "Login with existing account",
-    "mySettings": "My Settings",
-    "information": "Information",
-    "cancel": "Cancel",
-    "confirm": "Confirm",
-    "dashUpcoming": "Upcoming",
-    "dashInProgress": "In Progress",
-    "dashDone": "Completed",
-    "dashFinish": "Finished",
-    "dashTotal": "Total Sales",
-    "dashToDoList": "To Do's",
-    "dashTopLinks": "Popular Links",
-    "requestError": "Request Error",
-    "personName": "Personnel Name",
-    "required": "Required",
-    "personNickname": "Nickname",
-    "personGender": "Gender",
-    "personBirthday": "Birthday",
-    "personDepartment": "Department",
-    "save": "Save",
-    "saved": "Saved Successfully",
-    "query": "Filter",
-    "reset": "Reset",
-    "add": "Add",
-    "modify": "Modify",
-    "delete": "Delete",
-    "confirmDelete": "Are you sure?",
-    "userList": "User List",
-    "roleList": "Role List",
-    "dictList": "Dict List",
-    "name": "Name",
-    "operating": "Operating",
-    "creationTime": "Creation Time",
-    "updateTime": "Update Time",
-    "drawer": "Drawer",
-    "side": "Side",
-    "menuDisplay": "Menu Display",
-    "language": "Language",
-    "noRoutingMode": "No Routing Mode",
-    "routingMode": "Routing Mode",
-    "myInformation": "My Information",
-    "selectMenus": "Select Menus",
-    "selectUsers": "Select Users",
-    "unselectedUsers": "Unselected Users",
-    "selectedUsers": "Selected Users",
-    "selectUnselectedUsers": "Please select [UnSelected Users]",
-    "selectSelectedUsers": "Please select [Selected Users]",
-    "englishName": "English Name",
-    "sequenceNumber": "Sequence Number",
-    "remarks": "Remarks"
-
+  "pageConfirm": "Confirm",
+  "username": "Username",
+  "usernameRequired": "Username is required",
+  "password": "Password",
+  "passwordRequired": "Password is required",
+  "register": "Register",
+  "registerNewAccount": "Register a new account",
+  "registerSuccess": "Registration Successful",
+  "forgetPassword": "Clear Password",
+  "login": "login",
+  "confirmPassword": "Confirm Password",
+  "passwordMismatch": "Passwords must be the same",
+  "haveAccountLogin": "Login with existing account",
+  "mySettings": "My Settings",
+  "information": "Information",
+  "cancel": "Cancel",
+  "confirm": "Confirm",
+  "dashUpcoming": "Upcoming",
+  "dashInProgress": "In Progress",
+  "dashDone": "Completed",
+  "dashFinish": "Finished",
+  "dashTotal": "Total Sales",
+  "dashToDoList": "To Do's",
+  "dashTopLinks": "Popular Links",
+  "requestError": "Request Error",
+  "personName": "Personnel Name",
+  "required": "Required",
+  "personNickname": "Nickname",
+  "personGender": "Gender",
+  "personBirthday": "Birthday",
+  "personDepartment": "Department",
+  "save": "Save",
+  "saved": "Saved Successfully",
+  "query": "Filter",
+  "reset": "Reset",
+  "add": "Add",
+  "modify": "Modify",
+  "delete": "Delete",
+  "confirmDelete": "Are you sure?",
+  "userList": "User List",
+  "roleList": "Role List",
+  "dictList": "Dict List",
+  "name": "Name",
+  "operating": "Operating",
+  "creationTime": "Creation Time",
+  "updateTime": "Update Time",
+  "drawer": "Drawer",
+  "side": "Side",
+  "menuDisplay": "Menu Display",
+  "language": "Language",
+  "noRoutingMode": "No Routing Mode",
+  "routingMode": "Routing Mode",
+  "myInformation": "My Information",
+  "selectMenus": "Select Menus",
+  "selectUsers": "Select Users",
+  "unselectedUsers": "Unselected Users",
+  "selectedUsers": "Selected Users",
+  "selectUnselectedUsers": "Please select [UnSelected Users]",
+  "selectSelectedUsers": "Please select [Selected Users]",
+  "englishName": "English Name",
+  "sequenceNumber": "Sequence Number",
+  "remarks": "Remarks",
+  "parentMenu": "Parent Menu",
+  "root": "Root",
+  "imageTitle": "Image Title",
+  "imageMemo": "Image Memo",
+  "selectImage": "Select Image",
+  "videoTitle": "Video Title",
+  "videoMemo": "Video Memo",
+  "selectVideo": "Select Video",
+  "sizeLimit": "The size cannot exceed 10M",
+  "goToThePortal": "Go to the Portal",
+  "code": "Code",
+  "enable": "Enable",
+  "dictItemCode": "DictItem Code",
+  "dictItemName": "DictItem Name",
+  "completeTheTableData": "Please complete the table data",
+  "leaveMessage": "Leave me a message",
+  "allMessage": "Leave me a message",
+  "title": "Title",
+  "content": "Content",
+  "view": "View"
 }
