--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -1,63 +1,83 @@
 {
-    "username": "账号",
-    "usernameRequired": "账号必填",
-    "password": "密码",
-    "passwordRequired": "密码必填",
-    "registerNewAccount": "注册新账号",
-    "register": "注册",
-    "registerSuccess": "注册成功",
-    "forgetPassword": "忘记密码",
-    "login": "登录",
-    "confirmPassword": "确认密码",
-    "passwordMismatch": "两次密码必须一致",
-    "haveAccountLogin": "已有账号，登录",
-    "mySettings": "我的设置",
-    "information": "信息",
-    "cancel": "取消",
-    "confirm": "确定",
-    "dashUpcoming": "待办",
-    "dashInProgress": "在办",
-    "dashDone": "已办",
-    "dashFinish": "办结",
-    "dashTotal": "数量统计",
-    "dashToDoList": "待办列表",
-    "dashTopLinks": "常用链接",
-    "requestError": "请求出错",
-    "personName": "人员姓名",
-    "required": "必填",
-    "personNickname": "呢称",
-    "personGender": "性别",
-    "personBirthday": "出生年月",
-    "personDepartment": "所属部门",
-    "save": "保存",
-    "saved": "保存成功",
-    "query": "查询",
-    "reset": "重置",
-    "add": "增加",
-    "modify": "修改",
-    "delete": "删除",
-    "confirmDelete": "确定删除",
-    "userList": "用户列表",
-    "roleList": "角色列表",
-    "dictList": "数据字典列表",
-    "name": "姓名",
-    "operating": "操作",
-    "creationTime": "创建时间",
-    "updateTime": "修改时间",
-    "drawer": "抽屉",
-    "side": "侧边",
-    "menuDisplay": "菜单显示",
-    "language": "语言",
-    "noRoutingMode": "无路由模式",
-    "routingMode": "路由模式",
-    "myInformation": "我的信息",
-    "selectMenus": "选择菜单",
-    "selectUsers": "选择人员",
-    "unselectedUsers": "未选择的人员",
-    "selectedUsers": "已选择的人员",
-    "selectUnselectedUsers": "请选择【未选择人员】",
-    "selectSelectedUsers": "请选择【已选择人员】",
-    "englishName": "英文名",
-    "sequenceNumber": "顺序号",
-    "remarks": "备注"
+  "username": "用户名",
+  "usernameRequired": "账号必填",
+  "password": "密码",
+  "passwordRequired": "密码必填",
+  "registerNewAccount": "注册新账号",
+  "register": "注册",
+  "registerSuccess": "注册成功",
+  "forgetPassword": "忘记密码",
+  "login": "登录",
+  "confirmPassword": "确认密码",
+  "passwordMismatch": "两次密码必须一致",
+  "haveAccountLogin": "已有账号，登录",
+  "mySettings": "我的设置",
+  "information": "信息",
+  "cancel": "取消",
+  "confirm": "确定",
+  "dashUpcoming": "待办",
+  "dashInProgress": "在办",
+  "dashDone": "已办",
+  "dashFinish": "办结",
+  "dashTotal": "数量统计",
+  "dashToDoList": "待办列表",
+  "dashTopLinks": "常用链接",
+  "requestError": "请求出错",
+  "personName": "人员姓名",
+  "required": "必填",
+  "personNickname": "呢称",
+  "personGender": "性别",
+  "personBirthday": "出生年月",
+  "personDepartment": "所属部门",
+  "save": "保存",
+  "saved": "保存成功",
+  "query": "查询",
+  "reset": "重置",
+  "add": "增加",
+  "modify": "修改",
+  "delete": "删除",
+  "confirmDelete": "确定删除",
+  "userList": "用户列表",
+  "roleList": "角色列表",
+  "dictList": "数据字典列表",
+  "name": "名称",
+  "operating": "操作",
+  "creationTime": "创建时间",
+  "updateTime": "修改时间",
+  "drawer": "抽屉",
+  "side": "侧边",
+  "menuDisplay": "菜单显示",
+  "language": "语言",
+  "noRoutingMode": "无路由模式",
+  "routingMode": "路由模式",
+  "myInformation": "我的信息",
+  "selectMenus": "选择菜单",
+  "selectUsers": "选择人员",
+  "unselectedUsers": "未选择的人员",
+  "selectedUsers": "已选择的人员",
+  "selectUnselectedUsers": "请选择【未选择人员】",
+  "selectSelectedUsers": "请选择【已选择人员】",
+  "englishName": "英文名",
+  "sequenceNumber": "顺序号",
+  "remarks": "备注",
+  "parentMenu": "父菜单",
+  "root": "根目录",
+  "imageTitle": "图片标题",
+  "imageMemo": "图片描述",
+  "selectImage": "选择图片",
+  "videoTitle": "视频标题",
+  "videoMemo": "视频描述",
+  "selectVideo": "选择视频",
+  "sizeLimit": "大小不能超过10M",
+  "goToThePortal": "前往门户查看",
+  "code": "代码",
+  "enable": "启用",
+  "dictItemCode": "字典项代码",
+  "dictItemName": "字典项名称",
+  "completeTheTableData": "请完善表格数据",
+  "leaveMessage": "给我留言",
+  "allMessage": "所有留言",
+  "title": "标题",
+  "content": "内容",
+  "view": "查看"
 }
