package cry 升级0.1.1，支持手机拍照

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -65,7 +65,8 @@
   "root": "Root",
   "imageTitle": "Image Title",
   "imageMemo": "Image Memo",
-  "selectImage": "Select Image",
+  "gallery": "Gallery",
+  "camera": "Camera",
   "videoTitle": "Video Title",
   "videoMemo": "Video Memo",
   "selectVideo": "Select Video",
