--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -64,7 +64,8 @@
   "root": "根目录",
   "imageTitle": "图片标题",
   "imageMemo": "图片描述",
-  "selectImage": "选择图片",
+  "gallery": "相册",
+  "camera": "相机",
   "videoTitle": "视频标题",
   "videoMemo": "视频描述",
   "selectVideo": "选择视频",
