fix:edit国际化无中文 增加子系统管理的菜单

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -35,6 +35,7 @@
   "query": "Filter",
   "reset": "Reset",
   "add": "Add",
+  "edit": "Edit",
   "modify": "Modify",
   "delete": "Delete",
   "confirmDelete": "Are you sure?",
