菜单隶属于子系统

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -88,5 +88,6 @@
   "importExcel": "Import Excel",
   "exportExcel": "Export Excel",
   "success": "Success",
-  "subsystemList": "Sub System List"
+  "subsystemList": "Sub System List",
+  "menuManagement" : "Menu Management"
 }
