readme增加代码结构说明 cry升级到0.1.15处理了：删除确认后回退问题、cryCheckbox重置无效、cryListView可增加title

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -89,5 +89,6 @@
   "exportExcel": "Export Excel",
   "success": "Success",
   "subsystemList": "Sub System List",
-  "menuManagement" : "Menu Management"
+  "menuManagement" : "Menu Management",
+  "menuTile" : "Select the subsystem for menu management"
 }
