修改主页工具条

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -97,5 +97,7 @@
   "expand": "Expand",
   "nameShort": "Short Name",
   "fun": "Function",
-  "header": "Header"
+  "header": "Header",
+  "logout": "Logout"
+
 }
