--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -109,5 +109,7 @@
   "publishTimeEnd": "Publish time end",
   "author": "Author",
   "uploadArticle": "Upload Article",
-  "replay": "Replay"
+  "replay": "Replay",
+  "font": "Font",
+  "nightMode": "Night mode"
 }
