升级包cry到.1.9 https://github.com/cairuoyu/flutter_admin 修改privacy 的加载方式 https://github.com/cairuoyu/flutter_admin

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -15,6 +15,7 @@
   "mySettings": "My Settings",
   "information": "Information",
   "cancel": "Cancel",
+  "close": "Close",
   "confirm": "Confirm",
   "dashUpcoming": "Upcoming",
   "dashInProgress": "In Progress",
