--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -14,6 +14,7 @@
   "mySettings": "我的设置",
   "information": "信息",
   "cancel": "取消",
+  "close": "关闭",
   "confirm": "确定",
   "dashUpcoming": "待办",
   "dashInProgress": "在办",
